--- a/about.html
+++ b/about.html
@@ -85,6 +85,12 @@ body {
 	display: block;
 	margin:center;
         }
+#aboutme {
+	height:400px;
+        background:none;
+	display: block;
+	margin:center;
+}
 	
 .fa-facebook {
     background: rgba(0, 172, 237, 0);
@@ -135,32 +141,22 @@ ul li i:hover {
   	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="auto">
   	</a>  
     </section>
-<h1>About Me!</h1>
-
-	
-<img src="http://i.imgur.com/QxNYhKL.jpg?1" alt="Ricky Delgado" style="height:228px">
-<br>
-<article>My name is Ricky Delgado and I am a Miami native.
-<br>
-I am a graphic design and web design major at Miami International University
-<br>
-of Art & Design in Downtown Miami focusing more in graphic design and digital illustration.
-<br>
-I am constantly working on my coding skills to better suit your needs! 
-</article>
 <div class="jumbotron">
       <div class="container">
-        <h1> There are some things about me you should know </h1>
-        <p> Hi! My name is Ricardo Delgado but you can call me Ricky!
+        <h1> "HERE ARE SOME THINGS ABOUT ME YOU SHOULD KNOW..." </h1>
+        </div>
+    </div>
+<section id="aboutme">
+        <p>Hi! My name is Ricardo Delgado but you can call me Ricky!
 	<br>
 	<p>I was born and raised in beautiful sunny Miami
 	<br>
 	<p> I am currently pursuing a degree in graphic and web design at Miami International University of Art & Design in Downtown Miami.
 	<br>
 	<p> I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
-	<br>
-      </div>
-    </div>
+	<br>	
+	
+</section>
 <nav>
 	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
