--- a/about.html
+++ b/about.html
@@ -86,7 +86,9 @@ body {
 	margin:center;
         }
 #aboutme {
-	height:400px;
+	color: #fff;
+  	font-size: 50px;  
+  	font-family: 'Open Sans', sans-serif;height:400px;
         background:none;
 	display: block;
 	margin:center;
