--- a/about.html
+++ b/about.html
@@ -87,8 +87,9 @@ body {
         }
 #aboutme {
 	color: #fff;
-  	font-size: 50px;  
-  	font-family: 'Open Sans', sans-serif;height:400px;
+  	font-size: 30px;  
+  	font-family: 'Open Sans', sans-serif;
+  	height:300px;
         background:none;
 	display: block;
 	margin:center;
