--- a/about.html
+++ b/about.html
@@ -150,10 +150,7 @@ ul li i:hover {
         </div>
     </div>
 <section id="aboutme">
-        <p>Hi! My name is Ricardo Delgado but you can call me Ricky!
-	<p>I was born and raised in beautiful sunny Miami
-	<p> I am currently pursuing a degree in graphic and web design at Miami International University of Art & Design in Downtown Miami.
-	<p> I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
+        <p>Hi! My name is Ricardo Delgado but you can call me Ricky! I was born and raised in beautiful sunny MiamiI am currently pursuing a degree in graphic and web design at Miami International University of Art & Design in Downtown Miami. I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
 	
 	
 </section>
