--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@ body {
 	margin-left:15%;
 	margin-right:15%;
 	text-transform:uppercase;
-	margin-top:-10%;
+	margin-top:-20px;
 }
 	
 .fa-facebook {
