--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ body {
   display: inline;
 }
 .jumbotron {
-  background-image:url('http://i.imgur.com/TliwTZw.png');
+  background-image:url('http://i.imgur.com/re5pHk3.png');
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
