--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ body {
   display: inline;
 }
 .jumbotron {
-  background-image:url('http://i.imgur.com/re5pHk3.png');
+  background-image:url('http://i.imgur.com/bE0EESw.png');
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -85,7 +85,7 @@ body {
 	display: block;
 	margin:center;
         }
-#aboutme {
+#contactme {
 	color: #fff;
   	font-size: 25px;  
   	font-family: 'Open Sans', sans-serif;
@@ -136,8 +136,8 @@ ul li i:hover {
     <div class="nav">
       <nav class="fixed-nav-bar">
         <ul class="pull-right">
+          <li><a href="/index.html">Home</a></li>
           <li><a href="/about.html">About Me</a></li>
-          <li><a href="/contact.html">Contact Me</a></li>
           <li><a href="/resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
@@ -150,11 +150,11 @@ ul li i:hover {
     </section>
 <div class="jumbotron">
       <div class="container">
-        <h1> "" </h1>
+        <h1> "NOW THAT YOU HAVE GOTTEN TO KNOW ME, WE SHOULD MEET! </h1>
         </div>
     </div>
-<section id="aboutme">
-        <p>Hi! My name is Ricardo Delgado but you can call me Ricky! I was born and raised in beautiful sunny Miami, where I currently live. I am currently pursuing a degree in Graphic and Web Design at Miami International University of Art & Design in Downtown Miami. I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
+<section id="contactme">
+        <p> IF YOU HAVE ANY QUESTIONS, REQUESTS, PROJECTS, OR EVEN A JOKE TO SHARE FEEL FREE TO CONTACT ME!
 	
 	
 </section>
