--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@ ul li i:hover {
         </div>
     </div>
 <section id="aboutme">
-        <p>Hi! My name is Ricardo Delgado but you can call me Ricky! I was born and raised in beautiful sunny Miami, where I currently live. I am currently pursuing a degree in Graphic and Web Design at Miami International University of Art & Design in Downtown Miami. I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
+        <p>Hi! My name is Ricardo Delgado but you can call me Ricky! I was born and raised in beautiful sunny Miami, where I currently live. I was born on Bastille Day. I am currently pursuing a degree in Graphic and Web Design at Miami International University of Art & Design in Downtown Miami. I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
 	
 	
 </section>
