--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,13 @@ body {
 	text-transform:uppercase;
 	margin-top:-10px;
 }
+
+#snapwidget {
+	height:400px
+	background-color:03223d;
+	box-shadow: 0px,1px,0px;
+	display:block;
+}
 	
 .fa-facebook {
     background: rgba(0, 172, 237, 0);
@@ -155,8 +162,14 @@ ul li i:hover {
     </div>
 <section id="contactme">
         <p> IF YOU HAVE ANY QUESTIONS, REQUESTS, PROJECTS, OR EVEN A JOKE TO SHARE FEEL FREE TO CONTACT ME!
+	</section>
 	
-	
+<section id="snapwidget">
+	<!-- SnapWidget -->
+<iframe src="http://snapwidget.com/sc/?u=cmlja3lzbGltbXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8fHllc3xubw==&ve=170615" 
+        title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" 
+        frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:500px; height:125px">
+	</iframe>
 </section>
 <nav>
 	<div style="font-size: 30px; text-align: center;">
