--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,11 @@ ul li i:hover {
   font-style: normal;
 }
 </style>
-
-
-</head>
-
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?
+'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.
+twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>	
+   </head>
 <body>
 	<div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -193,6 +194,10 @@ data-width="500" data-numposts="3">
     <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
     <a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a>
     </div>
+    
+<section id="twitterwidget">
+<a class="twitter-timeline" href="https://twitter.com/RickyDelgadoMIA" data-widget-id="611078488309809152">Tweets by @RickyDelgadoMIA</a>
+</section>
 </nav>
 </body>
 </html>
