--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,6 @@ ul li i:hover {
   font-style: normal;
 }
 </style>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?
-'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.
-twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-    </script>	
    </head>
 <body>
 	<div id="fb-root"></div>
@@ -197,6 +193,8 @@ data-width="500" data-numposts="3">
     
 <section id="twitterwidget">
 <a class="twitter-timeline" href="https://twitter.com/RickyDelgadoMIA" data-widget-id="611078488309809152">Tweets by @RickyDelgadoMIA</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>
 </section>
 </nav>
 </body>
