--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <style>
 body {
-        background-image: url("http://i.imgur.com/WSOLgg8.png");
+        background-image: url("http://i.imgur.com/F1KjGts.png");
         background-size: cover;
         background-position:fixed;
         background-repeat: no-repeat;
