--- a/resume.html
+++ b/resume.html
@@ -153,8 +153,9 @@ ul li i:hover {
         <h1> "THIS IS WHY YOU SHOULD HIRE ME FOR YOUR NEXT DESIGN..." </h1>
         </div>
     </div>
-    <h1>"HERE'S WHY YOU SHOULD HIRE ME FOR YOUR NEXT DESIGN!</h1>
 </section>
+<iframe src="http://docs.google.com/gview?url=Ricky Delgado Resume_WEB.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+
 <iframe src="Ricky Delgado Resume_WEB.pdf"></iframe>
 
 <nav>
