--- a/resume.html
+++ b/resume.html
@@ -154,9 +154,7 @@ ul li i:hover {
         </div>
     </div>
 </section>
-<iframe src="http://docs.google.com/gview?url=Ricky Delgado Resume_WEB.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
-
-<iframe src="Ricky Delgado Resume_WEB.pdf"></iframe>
+<iframe src="Ricky Delgado Resume_WEB.pdf&embedded=true" style="width:500px; height:700px;" frameborder="0"></iframe>
 
 <nav>
 	<div style="font-size: 30px; text-align: center;">
