--- a/resume.html
+++ b/resume.html
@@ -154,7 +154,7 @@ ul li i:hover {
         </div>
     </div>
 </section>
-<iframe src="Ricky Delgado Resume_WEB.pdf&embedded=true" style="width:500px; height:700px;" frameborder="0"></iframe>
+<iframe src="/Ricky Delgado Resume_WEB.pdf" style="width:500px; height:700px;" frameborder="0"></iframe>
 
 <nav>
 	<div style="font-size: 30px; text-align: center;">
