--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@ body {
   display: inline;
 }
 .jumbotron {
-  background-image:url('http://i.imgur.com/re5pHk3.png');
+  background-image:url('http://i.imgur.com/WbuVaZA.png');
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
