--- a/portfolio.html
+++ b/portfolio.html
@@ -164,15 +164,9 @@ ul li i:hover {
     </section>
 <div class="jumbotron">
       <div class="container">
-        <h1> "HERE ARE SOME THINGS ABOUT ME YOU SHOULD KNOW..." </h1>
+        <h1> "BELOW IS SOME RECENT WORK BECAUSE ACTIONS SPEAK LOUDER THAN WORDS " </h1>
         </div>
     </div>
-<section id="aboutme">
-        <p>Hi! My name is Ricardo Delgado but you can call me Ricky! I was born and raised in beautiful sunny Miami, where I currently live. I was born on Bastille Day. I am currently pursuing a degree in Graphic and Web Design at Miami International University of Art & Design in Downtown Miami. I love to create anything! Whether its a logo design, or even a doodle, I really get a kick out of this stuff!
-	
-	
-</section>
-</head>
 <table>
 <tr>
 <td><a data-lightbox="miami" href="http://i.imgur.com/BG3TbRP.jpg"> 
