--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@ body {
 }
 .jumbotron h1 {
   color: #fff;
-  font-size: 90px;  
+  font-size: 75px;  
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   margin-left:50px;
@@ -164,7 +164,7 @@ ul li i:hover {
     </section>
 <div class="jumbotron">
       <div class="container">
-        <h1> "BELOW IS SOME RECENT WORK BECAUSE ACTIONS SPEAK LOUDER THAN WORDS " </h1>
+        <h1> "BELOW IS SOME OF MY RECENT WORK BECAUSE ACTIONS SPEAK LOUDER THAN WORDS " </h1>
         </div>
     </div>
 <table>
