--- a/portfolio.html
+++ b/portfolio.html
@@ -142,8 +142,11 @@ ul li i:hover {
 		}
 }
 </style>
- <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<scripts> <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
  <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+ <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+</scripts>
 </head>
 
 <body>
@@ -169,8 +172,8 @@ ul li i:hover {
     </div>
 <table>
 <tr>
-<td><a data-lightbox="miami" href="http://i.imgur.com/BG3TbRP.jpg"> 
-<img src="http://i.imgur.com/Q99KUQi.jpg" alt="African Adventures"></a></td>
+<td><a data-lightbox="StarLord" href="http://i.imgur.com/XYWkWjh.png"> 
+<img src="http://i.imgur.com/2Fg8Gal.png" alt="Star Lord Illustration"></a></td>
 
 <td><a data-lightbox="miami" href="http://i.imgur.com/gLLDsg4.jpg"> 
 <img src="http://i.imgur.com/wG02hGz.jpg" alt="Fashion Production"></a></td>
