--- a/portfolio.html
+++ b/portfolio.html
@@ -175,33 +175,33 @@ ul li i:hover {
 <td><a data-lightbox="StarLord" href="http://i.imgur.com/XYWkWjh.png"> 
 <img src="http://i.imgur.com/2Fg8Gal.png" alt="Star Lord Illustration"></a></td>
 
-<td><a data-lightbox="miami" href="http://i.imgur.com/gLLDsg4.jpg"> 
-<img src="http://i.imgur.com/wG02hGz.jpg" alt="Fashion Production"></a></td>
+<td><a data-lightbox="Photo Restoration" href="hhttp://i.imgur.com/AYxa2ce.png"> 
+<img src="http://i.imgur.com/KM4BbYp.png" alt="Photo Restoration"></a></td>
 
-<td><a data-lightbox="miami" href="http://i.imgur.com/w3k8Och.jpg"> 
-<img src="http://i.imgur.com/eag6rbH.jpg" alt="Pool Days"></a></td>
-
-</tr>
-<tr>
-<td><a data-lightbox="miami" href="http://i.imgur.com/dnhZzdf.jpg"> 
-<img src="http://i.imgur.com/03aCglz.jpg" alt="Diego"></a></td>
-
-<td><a data-lightbox="miami" href="http://i.imgur.com/5Zitn3H.jpg"> 
-<img src="http://i.imgur.com/SS4AbjY.jpg" alt="Fede"></a></td>
-
-<td><a data-lightbox="miami" href="http://i.imgur.com/b78asyr.jpg"> 
-<img src="http://i.imgur.com/UZKuRDa.jpg" alt="Wynwood"></a></td>
+<td><a data-lightbox="Digital Airbrush" href="http://i.imgur.com/TqOXHXU.png"> 
+<img src="http://i.imgur.com/Ai7OK8n.png" alt="Digital Airbrush"></a></td>
 
 </tr>
 <tr>
-<td><a data-lightbox="miami" href="http://i.imgur.com/Ouj1ylB.jpg"> 
-<img src="http://i.imgur.com/pyg6pWc.jpg" alt="Project Blue"></a></td>
+<td><a data-lightbox="Image Manipulation" href="http://rickydelgadojr.imgur.com/all/"> 
+<img src="http://i.imgur.com/oYH9foU.png" alt="Image Manip"></a></td>
 
-<td><a data-lightbox="miami" href="http://i.imgur.com/Zvrpycm.jpg"> 
-<img src="http://i.imgur.com/UHN87v4.jpg" alt="Boxes"></a></td>
+<td><a data-lightbox="Nike AirMag" href="http://i.imgur.com/pi2oEn1.png"> 
+<img src="http://i.imgur.com/CWRsyfZ.png" alt="AirMagIllustration"></a></td>
 
-<td><a data-lightbox="miami" href="http://i.imgur.com/xSXD4Pc.jpg"> 
-<img src="http://i.imgur.com/V8joKIG.jpg" alt="Color Script for Peter Pan"></a></td>
+<td><a data-lightbox="Veuve Ad" href="http://i.imgur.com/H5g6SFi.png"> 
+<img src="http://i.imgur.com/i7kXVpC.png" alt="Yoshi Veuve"></a></td>
+
+</tr>
+<tr>
+<td><a data-lightbox="Lemon Love" href="http://i.imgur.com/CXxsLgS.png"> 
+<img src="http://i.imgur.com/sS0ivGu.png" alt="Lemon Love"></a></td>
+
+<td><a data-lightbox="GoldenBerry" href="http://i.imgur.com/augH7v2.png"> 
+<img src="http://i.imgur.com/46Abhot.png" alt="Package Design"></a></td>
+
+<td><a data-lightbox="Hummingbird Digital Color" href="http://i.imgur.com/iLIIuSp.png"> 
+<img src="http://i.imgur.com/T9goetb.png" alt="Digital Color">Digita Color</a></td>
 
 </tr>
 </table>
