--- a/portfolio.html
+++ b/portfolio.html
@@ -201,28 +201,10 @@ ul li i:hover {
 <img src="http://i.imgur.com/46Abhot.png" alt="Package Design"></a></td>
 
 <td><a data-lightbox="Hummingbird Digital Color" href="http://i.imgur.com/iLIIuSp.png"> 
-<img src="http://i.imgur.com/T9goetb.png" alt="Digital Color">Digita Color</a></td>
+<img src="http://i.imgur.com/T9goetb.png" alt="Digital Color"></a></td>
 
 </tr>
 </table>
-	<table id="table1">
-<tr>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" width="300" /></td>
- <td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" width="300" /></td>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" width="300" /></td>
-</tr>
-<tr>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" width="300" /></td>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" width="300" /></td>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" width="300" /></td>
-</tr>
-<tr>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" width="300" /></td>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" width="300" /></td>
-<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" width="300" /></td>
-</tr>
-</table>
-<nav>
 	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
     <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a>
