--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@ ul li i:hover {
 <td><a data-lightbox="StarLord" href="http://i.imgur.com/XYWkWjh.png"> 
 <img src="http://i.imgur.com/2Fg8Gal.png" alt="Star Lord Illustration"></a></td>
 
-<td><a data-lightbox="Photo Restoration" href="hhttp://i.imgur.com/AYxa2ce.png"> 
+<td><a data-lightbox="Photo Restoration" href="http://i.imgur.com/AYxa2ce.png"> 
 <img src="http://i.imgur.com/KM4BbYp.png" alt="Photo Restoration"></a></td>
 
 <td><a data-lightbox="Digital Airbrush" href="http://i.imgur.com/TqOXHXU.png"> 
@@ -183,7 +183,7 @@ ul li i:hover {
 
 </tr>
 <tr>
-<td><a data-lightbox="Image Manipulation" href="http://rickydelgadojr.imgur.com/all/"> 
+<td><a data-lightbox="Image Manipulation" href="http://i.imgur.com/i1LHKDQ.png"> 
 <img src="http://i.imgur.com/oYH9foU.png" alt="Image Manip"></a></td>
 
 <td><a data-lightbox="Nike AirMag" href="http://i.imgur.com/pi2oEn1.png"> 
