--- a/portfolio.html
+++ b/portfolio.html
@@ -133,8 +133,9 @@ ul li i:hover {
   font-style: normal;
   
    table {
-	 margin-left:105px;
+	 margin-left:auto;
 	 margin-right:auto;
+	 text-align:center;
 	 }
 	 
  td {
