--- a/portfolio.html
+++ b/portfolio.html
@@ -133,9 +133,8 @@ ul li i:hover {
   font-style: normal;
   
    table {
-	 margin-left:auto;
-	 margin-right:auto;
-	 text-align:center;
+	 margin-left:10%;
+	 text-align:10%;
 	 }
 	 
  td {
