--- a/portfolio.html
+++ b/portfolio.html
@@ -132,10 +132,11 @@ ul li i:hover {
   font-weight: normal;
   font-style: normal;
   
-   table {
-	 margin-left:10%;
-	 text-align:10%;
-	 }
+   .centerTable { 
+   	margin: 0px auto; 
+   	
+   }
+	
 	 
  td {
 	padding: 5px;
@@ -170,7 +171,7 @@ ul li i:hover {
         <h1> "BELOW IS SOME OF MY RECENT WORK BECAUSE ACTIONS SPEAK LOUDER THAN WORDS " </h1>
         </div>
     </div>
-<table>
+<table class="centerTable">
 <tr>
 <td><a data-lightbox="StarLord" href="http://i.imgur.com/XYWkWjh.png"> 
 <img src="http://i.imgur.com/2Fg8Gal.png" alt="Star Lord Illustration"></a></td>
