--- a/portfolio.html
+++ b/portfolio.html
@@ -132,10 +132,9 @@ ul li i:hover {
   font-weight: normal;
   font-style: normal;
   
-   .centerTable { 
+   #centerTable { 
    	margin: 0px auto; 
-   	
-   }
+   	}
 	
 	 
  td {
@@ -171,7 +170,8 @@ ul li i:hover {
         <h1> "BELOW IS SOME OF MY RECENT WORK BECAUSE ACTIONS SPEAK LOUDER THAN WORDS " </h1>
         </div>
     </div>
-<table class="centerTable">
+<section id="centerTable">
+  <table style="margin: 0px auto;">
 <tr>
 <td><a data-lightbox="StarLord" href="http://i.imgur.com/XYWkWjh.png"> 
 <img src="http://i.imgur.com/2Fg8Gal.png" alt="Star Lord Illustration"></a></td>
@@ -206,6 +206,7 @@ ul li i:hover {
 
 </tr>
 </table>
+</section>
 	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
     <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a>
