--- a/portfolio.html
+++ b/portfolio.html
@@ -153,10 +153,10 @@ ul li i:hover {
     <div class="nav">
       <nav class="fixed-nav-bar">
         <ul class="pull-right">
+          <li><a href="/index.html">Home</a></li>
           <li><a href="/about.html">About Me</a></li>
           <li><a href="/contact.html">Contact Me</a></li>
           <li><a href="/resume.html">Resume</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
     </div>
