--- a/resume.html
+++ b/resume.html
@@ -66,12 +66,13 @@ body {
 }
 .jumbotron h1 {
   color: #fff;
-  font-size: 55px;  
+  font-size: 65px;  
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   margin-left:50px;
   margin-top:200px;
   margin-right:50px;
+  position: fixed;
 }
 .jumbotron p {
   font-size: 20px;
