--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@ body {
   display: inline;
 }
 .jumbotron {
-  background-image:url('http://i.imgur.com/Mi2msBj.png');
+  background-image:url('http://i.imgur.com/tLaM2IL.png');
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -84,6 +84,7 @@ body {
         background-size: cover;
 	display: block;
 	margin:center;
+	position:fixed;
         }
 #aboutme {
 	color: #fff;
