--- a/resume.html
+++ b/resume.html
@@ -150,7 +150,7 @@ ul li i:hover {
     </section>
 <div class="jumbotron">
       <div class="container">
-        <h1> "THIS IS WHY YOU SHOULD HIRE ME FOR YOUR NEXT DESIGN..." </h1>
+        <h1>THIS PAGE IS WHY YOU SHOULD HIRE ME FOR YOUR NEXT DESIGN... </h1>
         </div>
     </div>
 </section>
