--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
    <link rel="apple-touch-icon" href="/RickyDelgadoTouchFavicon.png" />
   
    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-   <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
   
    
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
@@ -67,7 +66,7 @@ body {
 }
 .jumbotron h1 {
   color: #fff;
-  font-size: 90px;  
+  font-size: 65px;  
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   margin-left:50px;
@@ -133,7 +132,7 @@ ul li i:hover {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="auto">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="750">
   	</a>  
     </section>
 
