--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="typicons.font-2.0.7/src/font/typicons.css">
-  
+   <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
 
 
 <style>
@@ -66,7 +66,7 @@ body {
 }
 .jumbotron h1 {
   color: #fff;
-  font-size: 65px;  
+  font-size: 75px;  
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   margin-left:50px;
