--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ body {
 }
 #logo {
         margin-top:75px;
-        height:400px;
+        margin-bottom:100px;
+        height:350px;
         background-repeat: no-repeat;
         background-size: cover;
 	display: block;
@@ -132,7 +133,7 @@ ul li i:hover {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="750">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
   	</a>  
     </section>
 
