--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
    <link rel="apple-touch-icon" href="/RickyDelgadoTouchFavicon.png" />
   
    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-   <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
   
    
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
@@ -58,7 +58,7 @@ body {
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:-355px;
+  margin-top:-350px;
 }
 .jumbotron .container {
   position: relative;
@@ -86,7 +86,7 @@ body {
 	margin:center;
         }
 #contactme {
-	color: #fff;
+	color: white;
   	font-size: 25px;  
   	font-family: 'Open Sans', sans-serif;
   	height:185px;
@@ -97,6 +97,11 @@ body {
 	margin-right:15%;
 	text-transform:uppercase;
 	margin-top:-10px;
+	text-decoration:none;
+}
+#contactme:a {
+ color:white;
+ text-decoration:none;
 }
 
 #snapwidget {
@@ -156,17 +161,17 @@ ul li i:hover {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="auto">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
   	</a>  
     </section>
 <div class="jumbotron">
       <div class="container">
-        <h1> "NOW THAT YOU HAVE GOTTEN TO KNOW ME, WE SHOULD MEET! </h1>
+        <h1> NOW THAT YOU HAVE GOTTEN TO KNOW ME, WE SHOULD MEET! </h1>
         </div>
     </div>
 <section id="contactme">
         <p> IF YOU HAVE ANY QUESTIONS, REQUESTS, PROJECTS, OR EVEN A JOKE TO SHARE FEEL FREE TO CONTACT ME AT MY
-        <a href="mailto:rickydelgadojunior@gmail.com?Subject=Howdy%20Partner!" target="_top">Send me an E-MAIL!</a>
+        <a href="mailto:rickydelgadojunior@gmail.com?Subject=Howdy%20Partner!" target="_top">E-MAIL!</a>
 	</section>
 	
 <section id="snapwidget">
