--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,8 @@ ul li i:hover {
 <section id="snapwidget">
 	<!-- SnapWidget -->
 <iframe src="http://snapwidget.com/sc/?u=cmlja3lzbGltbXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8fHllc3xubw==&ve=170615" 
-        title="Instagram Widget" class="snapwidget-widget" color="rgba(255,255,255,.15)"
-        frameborder="0" style="overflow:hidden; width:500px; height:125px">
+        title="Instagram Widget" class="snapwidget-widget"
+        style="overflow:hidden; width:500px; height:125px">
 	</iframe>
 </section>
 
