--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@ ul li i:hover {
 	
 <section id="snapwidget">
 	<!-- SnapWidget -->
-<iframe src="http://snapwidget.com/sc/?u=cmlja3lzbGltbXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8fHllc3xubw==&ve=170615" seamless 
+<iframe src="http://snapwidget.com/sc/?u=cmlja3lzbGltbXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8fHllc3xubw==&ve=170615" seamless="seamless" 
         title="Instagram Widget" class="snapwidget-widget"
         style="overflow:hidden; width:500px; height:125px">
 	</iframe>
