--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
    <link rel="apple-touch-icon" href="/RickyDelgadoTouchFavicon.png" />
   
    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-   <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
   
    
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
@@ -58,7 +58,7 @@ body {
   height: 530px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top:-355px;
+  margin-top:-350px;
 }
 .jumbotron .container {
   position: relative;
@@ -145,7 +145,7 @@ ul li i:hover {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="auto">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
   	</a>  
     </section>
 <div class="jumbotron">
@@ -153,14 +153,13 @@ ul li i:hover {
         <h1>THIS PAGE IS WHY YOU SHOULD HIRE ME FOR YOUR NEXT DESIGN... </h1>
         </div>
     </div>
-</section>
-<iframe src="/Ricky Delgado Resume_WEB.pdf" style="width:500px; height:700px;" frameborder="0"></iframe>
+<iframe src="/Ricky Delgado Resume_WEB.pdf" style="width:500px; height:700px;" seamless="seamless"></iframe>
 
 <nav>
 	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
     <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a>
-    <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
+    <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a>
     <a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a>
     </div>
 </nav>
