--- a/resume.html
+++ b/resume.html
@@ -153,7 +153,7 @@ ul li i:hover {
         <h1>THIS PAGE IS WHY YOU SHOULD HIRE ME FOR YOUR NEXT DESIGN... </h1>
         </div>
     </div>
-<iframe src="/Ricky Delgado Resume_WEB.pdf" style="width:500px; height:700px;" seamless="seamless"></iframe>
+<iframe src="//Ricky Delgado Resume_WEB.pdf" style="width:500px; height:700px;" seamless="seamless"></iframe>
 
 <nav>
 	<div style="font-size: 30px; text-align: center;">
