--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<!DOCTYPE html>
-  
-  <head>
+ <head>
   <TITLE>Ricky Delgado Graphic Design</TITLE>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -13,7 +9,7 @@
    <link rel="apple-touch-icon" href="/RickyDelgadoTouchFavicon.png" />
   
    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-   <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
   
    
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
