--- a/portfolio.html
+++ b/portfolio.html
@@ -138,11 +138,10 @@ ul li i:hover {
 		}
 }
 </style>
-<scripts> <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+ <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
  <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-</scripts>
+ <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </head>
 
 <body>
