--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@ ul li i:hover {
     </div>
 
 <section id="logo">
-  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner" width="auto">
+  	<a href="/index.html"> <img src="http://i.imgur.com/FLOvLva.png" alt="Banner">
   	</a>  
     </section>
 <div class="jumbotron">
@@ -202,10 +202,11 @@ ul li i:hover {
 </tr>
 </table>
 </section>
+<nav>	
 	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
     <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a>
-    <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
+    <a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a>
     <a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a>
     </div>
 </nav>
