--- a/contact.html
+++ b/contact.html
@@ -188,8 +188,7 @@ data-width="500" data-numposts="3">
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
     </script>
 </section>
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.0676598825667!2d-80.237313!3d25.735275999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b7ca18c5f2a7%3A0x976fa83d87be179e!2s3001+SW+27th+Ave%2C+Coconut+Grove%2C+FL+33133!5e0!3m2!1sen!2sus!4v1434568839016" width="675"; height="250"; seamless="seamless"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.0676598825667!2d-80.237313!3d25.735275999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b7ca18c5f2a7%3A0x976fa83d87be179e!2s3001+SW+27th+Ave%2C+Coconut+Grove%2C+FL+33133!5e0!3m2!1sen!2sus!4v1434568839016" width="675" height="250" frameborder="0" style="border:0"></iframe>
 <nav>
 	<div style="font-size: 30px; text-align: center;">
     <a href="https://www.facebook.com/rickydelgadojunior"> <i class="fa fa-facebook-official"></i></a>
