--- a/final.html
+++ b/final.html
@@ -26,8 +26,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Headline 1.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna. </p>
+        <h1>Immerse yourself in the world of Nintendo!</h1>
+        <p>Nintendo Co., Ltd. is a Japanese multinational consumer electronics company headquartered in Kyoto, Japan. It was originally founded in 1889 to produce handmade hanafuda cards. It eventually became one of the most prominent figures in today's video game industry, being the world's largest video game company by revenue. With their beloved characters such as Super Mario and Link from the Legend of Zelda they have won over the hearts of children and adults alike all over the world! </p>
         <a href="#">Learn More</a>
       </div>
     </div> 
