--- a/final.html
+++ b/final.html
@@ -13,8 +13,8 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
+          <li><a href="http://www.nintendo.com/">Official Site</a></li>
+          <li><a href="https://store.nintendo.com/ng3/">Visit the eShop</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="#">Link A</a></li>
@@ -28,31 +28,31 @@
       <div class="container">
         <h1>Immerse yourself in the world of Nintendo!</h1>
         <p>Nintendo Co., Ltd. is a Japanese multinational consumer electronics company headquartered in Kyoto, Japan. It was originally founded in 1889 to produce handmade hanafuda cards. It eventually became one of the most prominent figures in today's video game industry, being the world's largest video game company by revenue. With their beloved characters such as Super Mario and Link from the Legend of Zelda they have won over the hearts of children and adults alike all over the world! </p>
-        <a href="#">Learn More</a>
+        <a href="https://en.wikipedia.org/wiki/Nintendo">Learn More about Nintendo</a>
       </div>
     </div> 
 
 <div class="neighborhood-guides">
     <div class="container">
-        <h2>Header 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna. </p>
+        <h2>What's new in the world of Nintendo?</h2>
+        <p> Being the top grossing video game corporation in the world, Nintendo is always coming out with new features and games to make their fans of all age happy. This year at the e3 convention Nintendo has released several new titles that will be released soon on the Nintendo WiiU and the Nintendo 3DSXL.  </p>
         <div class="row">
 	      <div  class="col-md-4"> <div class="thumbnail">
-  <img src="http://goo.gl/0sX3jq" >
+  <img src="http://i.imgur.com/f7WGpX9.png" >
 </div><div class="thumbnail">
-  <img src="http://goo.gl/an2HXY" >
+  <img src="http://i.imgur.com/pn66OiP.png" >
 </div>
 
 	      </div>
 	        <div  class="col-md-4"> <div class="thumbnail">
-  <img src="http://goo.gl/Av1pac" >
+  <img src="http://i.imgur.com/9347wCb.png" >
 </div><div class="thumbnail">
-  <img src="http://goo.gl/vw43v1" >
+  <img src="http://i.imgur.com/RRpC0Qk.png" >
 </div>
 
 	      </div>
 	        <div  class="col-md-4"> <div class="thumbnail">
-  <img src="http://goo.gl/0Kd7UO" >
+  <img src="http://i.imgur.com/t7Q7t5M.png" >
 </div>
 
 	      </div>
