--- a/final.html
+++ b/final.html
@@ -17,9 +17,9 @@
           <li><a href="https://store.nintendo.com/ng3/">Visit the eShop</a></li>
         </ul>
         <ul class="pull-right">
-          <li><a href="#">Link A</a></li>
-          <li><a href="#">Link B</a></li>
-          <li><a href="#">Link C</a></li>
+          <li><a href="e3.nintendo.com">Watch e3 LIVE!</a></li>
+          <li><a href="http://www.zelda.com">Zelda Official Site</a></li>
+          <li><a href="http://supermario.nintendo.com/">Super Mario Official Site</a></li>
         </ul>
       </div>
     </div>
@@ -64,7 +64,7 @@
 	  <div class="container">
 		<div class="row">
 	      <div  class="col-md-4">
-			<h3><Strong>Just announced!</Strong>The Legend of Zelda: Tri Force Heroes</h3>
+			<h3><Strong>Just announced!</Strong> The Legend of Zelda: Tri Force Heroes</h3>
 			<p>In the visual style of the critically-acclaimed The Legend of Zelda: A Link Between Worlds game comes a new adventure. In this journey, three players team up– each as Link – to cooperatively make their way through inventive dungeons and battle bosses. Use the new Totem mechanic to stack three Links on top of each other to reach higher grounds and solve puzzles. Collect loot to create wearable outfits, each with a different boost or ability.</p>
 			<p><a href="http://e3.nintendo.com/games/3ds/the-legend-of-zelda-tri-force-heroes/">Learn more 1</a></p>
 	      </div>
