--- a/final.html
+++ b/final.html
@@ -6,8 +6,7 @@
     
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="final.css">
-    
-  </head>
+  </head
 
   <body>
     <div class="nav">
@@ -38,21 +37,21 @@
         <p> Being the top grossing video game corporation in the world, Nintendo is always coming out with new features and games to make their fans of all age happy. This year at the e3 convention Nintendo has released several new titles that will be released soon on the Nintendo WiiU and the Nintendo 3DSXL.  </p>
         <div class="row">
 	      <div  class="col-md-4"> <div class="thumbnail">
-  <img src="http://i.imgur.com/f7WGpX9.png" >
+  <img src="http://i.imgur.com/f7WGpX9.png" alt="Starfox" >
 </div><div class="thumbnail">
-  <img src="http://i.imgur.com/pn66OiP.png" >
+  <img src="http://i.imgur.com/pn66OiP.png" alt="supermario" >
 </div>
 
 	      </div>
 	        <div  class="col-md-4"> <div class="thumbnail">
-  <img src="http://i.imgur.com/9347wCb.png" >
+  <img src="http://i.imgur.com/9347wCb.png" alt="zelda" >
 </div><div class="thumbnail">
-  <img src="http://i.imgur.com/RRpC0Qk.png" >
+  <img src="http://i.imgur.com/RRpC0Qk.png" alt="championships" >
 </div>
 
 	      </div>
 	        <div  class="col-md-4"> <div class="thumbnail">
-  <img src="http://i.imgur.com/t7Q7t5M.png" >
+  <img src="http://i.imgur.com/t7Q7t5M.png" alt="zelda" >
 </div>
 
 	      </div>
