--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 .nav a {
   color: white;
   font-size: 24px;
-  font-weight: normal;
+  font-weight: 300;
   font-family: 'Open Sans', sans-serif;
   padding: 14px 10px;
   text-transform: uppercase;
