--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
 <title>Ricky Delgado Graphic Design</title>
    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -35,7 +34,7 @@ body {
   left: 0;
   margin-bottom:50px;
   z-index: 9999;
-  width: 100%;
+  width: auto;
   height: 50px;
   background-color: #03223d;
 }
