--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
   left: 0;
   margin-bottom:50px;
   z-index: 9999;
-  width: auto;
+  width: 100%;
   height: 50px;
   background-color: #03223d;
 }
