--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,7 @@ ul li i:hover {
     </section>
 <div class="jumbotron">
       <div class="container">
-        <h1> "BELOW IS SOME OF MY RECENT WORK BECAUSE ACTIONS SPEAK LOUDER THAN WORDS " </h1>
+        <h1> CHECK OUT SOME OF MY RECENT WORK, BECAUSE ACTIONS SPEAK LOUDER THAN WORDS </h1>
         </div>
     </div>
 <section id="centerTable">
