--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
         margin:auto;
 }
 .fixed-nav-bar {
-  position: fixed;
+  position: static;
   top: 0;
   left: 0;
   margin-bottom:50px;
