--- a/portfolio.html
+++ b/portfolio.html
@@ -137,6 +137,19 @@ ul li i:hover {
 	padding: 5px;
 		}
 }
+
+
+#box {
+  width: 100%;
+  height: 150px;
+  background-color: #03223d;
+}
+
+#box p {
+	color: #fff;
+	font-family:'Open Sans', sans-serif;
+	font-weight:300;
+}
 </style>
  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
  <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
@@ -165,6 +178,9 @@ ul li i:hover {
         <h1> CHECK OUT SOME OF MY RECENT WORK, BECAUSE ACTIONS SPEAK LOUDER THAN WORDS </h1>
         </div>
     </div>
+    <section id="box">
+    	<p>Click on any of the images below to see the full version!</p>
+    </section>
 <section id="centerTable">
   <table style="margin: 0px auto;">
 <tr>
