--- a/portfolio.html
+++ b/portfolio.html
@@ -149,6 +149,10 @@ ul li i:hover {
 	color: #fff;
 	font-family:'Open Sans', sans-serif;
 	font-weight:300;
+	font-size: 50px;
+	padding-top: 20%;
+	padding-bottom: 20%;
+	text-transform: uppercase;
 }
 </style>
  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
