--- a/portfolio.html
+++ b/portfolio.html
@@ -150,8 +150,8 @@ ul li i:hover {
 	font-family:'Open Sans', sans-serif;
 	font-weight:300;
 	font-size: 50px;
-	padding-top: 20%;
-	padding-bottom: 20%;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	text-transform: uppercase;
 }
 </style>
