--- a/portfolio.html
+++ b/portfolio.html
@@ -153,6 +153,7 @@ ul li i:hover {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	text-transform: uppercase;
+	padding-top: 10%;
 }
 </style>
  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
