--- a/portfolio.html
+++ b/portfolio.html
@@ -141,8 +141,9 @@ ul li i:hover {
 
 #box {
   width: 100%;
-  height: 150px;
+  height: 100px;
   background-color: #03223d;
+  margin-top:0px;
 }
 
 #box p {
@@ -153,7 +154,6 @@ ul li i:hover {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	text-transform: uppercase;
-	padding-top: 10%;
 }
 </style>
  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
