--- a/portfolio.html
+++ b/portfolio.html
@@ -141,9 +141,9 @@ ul li i:hover {
 
 #box {
   width: 100%;
-  height: 100px;
+  height: 80px;
   background-color: #03223d;
-  margin-top:0px;
+  margin-top:-10px;
 }
 
 #box p {
@@ -154,6 +154,7 @@ ul li i:hover {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	text-transform: uppercase;
+	text-shadow: 1px,1px,1px, black;
 }
 </style>
  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
