--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,8 @@ ul li i:hover {
 	color: #fff;
 	font-family:'Open Sans', sans-serif;
 	font-weight:300;
-	font-size: 40px;
+	font-size: 0.875em; /* If the baseline is 16px, this will scale the font to 14px */
+        line-height: 1em;  /* This keeps the line height proportional to the font size *
 	margin-top: 10px;
 	margin-bottom: 10px;
 	text-transform: uppercase;
