--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@ body {
         background-size: cover;
         background-position:fixed;
         background-repeat: no-repeat;
+        font-size: 100%;
         font-family: 'Open Sans', sans-serif;
         text-align: center;
         box-shadow: 0px 5px 6px black;
