--- a/portfolio.html
+++ b/portfolio.html
@@ -151,11 +151,12 @@ ul li i:hover {
 	color: #fff;
 	font-family:'Open Sans', sans-serif;
 	font-weight:300;
-	font-size: 0.875em; /* If the baseline is 16px, this will scale the font to 14px */
-        line-height: 1em;  /* This keeps the line height proportional to the font size *
+        font-size:50px;
+        position: center;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	text-transform: uppercase;
+	z-index: 9999;
 	text-shadow: 1px,1px,1px, black;
 }
 </style>
