--- a/portfolio.html
+++ b/portfolio.html
@@ -188,8 +188,9 @@ ul li i:hover {
         </div>
     </div>
     <section id="box">
-    	<p>Click on any of the images below to see the full version!</p>
+    	<p>Click on any of the images below!</p>
     </section>
+    
 <section id="centerTable">
   <table style="margin: 0px auto;">
 <tr>
