--- a/final.html
+++ b/final.html
@@ -65,17 +65,17 @@
 	      <div  class="col-md-4">
 			<h3><Strong>Just announced!</Strong> The Legend of Zelda: Tri Force Heroes</h3>
 			<p>In the visual style of the critically-acclaimed The Legend of Zelda: A Link Between Worlds game comes a new adventure. In this journey, three players team up– each as Link – to cooperatively make their way through inventive dungeons and battle bosses. Use the new Totem mechanic to stack three Links on top of each other to reach higher grounds and solve puzzles. Collect loot to create wearable outfits, each with a different boost or ability.</p>
-			<p><a href="http://e3.nintendo.com/games/3ds/the-legend-of-zelda-tri-force-heroes/">Learn more 1</a></p>
+			<p><a href="http://e3.nintendo.com/games/3ds/the-legend-of-zelda-tri-force-heroes/">Learn more </a></p>
 	      </div>
 		  <div class="col-md-4">
 			<h3>After a long wait Star Fox is back!!</h3>
 			<p>n the visual style of the critically-acclaimed The Legend of Zelda: A Link Between Worlds game comes a new adventure. In this journey, three players team up– each as Link – to cooperatively make their way through inventive dungeons and battle bosses. Use the new Totem mechanic to stack three Links on top of each other to reach higher grounds and solve puzzles. Collect loot to create wearable outfits, each with a different boost or ability. </p>
-			<p><a href="http://e3.nintendo.com/games/wiiu/star-fox-zero/">Learn more 2</a></p>
+			<p><a href="http://e3.nintendo.com/games/wiiu/star-fox-zero/">Learn more </a></p>
 		  </div>
 		  <div class="col-md-4">
 			<h3>The ultimate evolution of Super Mario Bros. is here!</h3>
 			<p>The Mario experience of your dreams has arrived and is bursting with creativity... including yours! Play a near-limitless number of intensely creative Super Mario levels from players around the world. It’s easy enough to create your own levels with the Wii U GamePad controller that it may feel like you’re simply sketching out your ideas on paper, but you can now bring enemies and objects into a playable course in ways you could only dream of before. What was impossible in traditional Mario games is now impossibly fun, so let your imagination run wild! </p>
-			<p><a href="http://e3.nintendo.com/games/wiiu/super-mario-maker/">Learn more 3</a></p>
+			<p><a href="http://e3.nintendo.com/games/wiiu/super-mario-maker/">Learn more </a></p>
 		  </div>
 	    </div>
 	  </div>
